[package]
name = "e621_downloader"
version = "1.7.1"
authors = ["McSib <mcsibsart@gmail.com>"]
edition = "2021"

[dependencies]
# These are added to fix security vulnerabilities.
regex = "1.6.0"
smallvec = "1.10.0"
tokio = "1.21.22"

base64-url = "1.4.13"
indicatif = "0.17.1"
dialoguer = "0.10.2"
console = "0.15.2"
log = "0.4.17"
simplelog = "0.12.0"
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
failure = "0.1.8"
