[package]
name = "e621_downloader"
version = "1.7.2"
authors = ["McSib <mcsibsart@gmail.com>"]
edition = "2021"

[dependencies]
# These are added to fix security vulnerabilities.
regex = "1.7.0"
smallvec = "1.10.0"
tokio = "1.23.0"
rustls = "0.20.7"
openssl = "0.10.52"

once_cell = "1.16.0"
base64-url = "1.4.13"
indicatif = "0.17.2"
dialoguer = "0.10.2"
console = "0.15.2"
log = "0.4.17"
simplelog = "0.12.0"
reqwest = { version = "0.11.13", features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
failure = "0.1.8"
