[package]
name = "e621_downloader"
version = "1.7.2"
authors = ["McSib <mcsibsart@gmail.com>"]
edition = "2021"

[dependencies]
# These are added to fix security vulnerabilities.
regex = "1.8.1"
smallvec = "1.10.0"
tokio = "1.28.0"
rustls = "0.21.0"
h2 = "0.3.18"
bumpalo = "3.12.1"
remove_dir_all = "0.8.2"

once_cell = "1.17.1"
base64-url = "2.0.0"
indicatif = "0.17.3"
dialoguer = "0.10.4"
console = "0.15.5"
log = "0.4.17"
simplelog = "0.12.1"
reqwest = { version = "0.11.16", features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
anyhow = "1.0.70"
